--- a/configuration/enrollment-service.yml
+++ b/configuration/enrollment-service.yml
@@ -4,6 +4,9 @@ spring:
     spring.datasource.driver-class-name: org.postgresql.Driver
     username: postgres
     password: password
+  spring:
+    flyway:
+      baseline-on-migrate: true
   jpa:
     hibernate:
       ddl-auto: create-drop
