--- a/configuration/enrollment-service.yml
+++ b/configuration/enrollment-service.yml
@@ -20,3 +20,10 @@ eureka:
 info:
   app:
     name: ${spring.application.name}
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+
