--- a/configuration/career-service.yml
+++ b/configuration/career-service.yml
@@ -5,7 +5,7 @@ spring:
     username: postgres
     password: password
   flyway:
-    baseline-on-migrate: false
+    baseline-on-migrate: true
   jpa:
     hibernate:
       ddl-auto: create-drop
