--- a/configuration/career-service.yml
+++ b/configuration/career-service.yml
@@ -4,8 +4,6 @@ spring:
     spring.datasource.driver-class-name: org.postgresql.Driver
     username: postgres
     password: password
-  flyway:
-    baseline-on-migrate: true
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -26,4 +24,7 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     operationsSorter: method
+flyway:
+  enabled: true
+  baseline-on-migrate: true
 
