--- a/configuration/career-service.yml
+++ b/configuration/career-service.yml
@@ -1,18 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/career_planning?createDatabaseIfNotExist=true
+    url: jdbc:postgresql://localhost:5432/career_planning
     spring.datasource.driver-class-name: org.postgresql.Driver
     username: postgres
     password: password
   flyway:
     baseline-on-migrate: true
     enabled: true
-    url: jdbc:postgresql://localhost:5432/career_planning
-    user: postgres
-    password: password
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 server:
   port: 8093
 
