--- a/configuration/planning-service.yml
+++ b/configuration/planning-service.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/semester-planning
+    url: jdbc:postgresql://localhost:5432/semester_planning
     spring.datasource.driver-class-name: org.postgresql.Driver
     username: postgres
     password: password
